<resources>
    <string name="app_name">Genova Tour App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Center">Center</string>
    <string name="West">West</string>
    <string name="East">East</string>
    <string name="OldCity">Old City</string>
    <string name="Welcome">Welcome</string>
    <string name="genova">Welcome to the Genova Tour App! </string>
    <string name="genova1">Genova is the capital of the Italian region of Liguria and the sixth-largest city in Italy. in 2015 became the Metropolitan City of Genoa, counted 855,834 resident persons.Over 1.5 million people live in the wider metropolitan area stretching along the Italian Riviera</string>
    <string name="mapfind">find it on a map</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat</string>
    <string name="erbe">Piazza Delle Erbe</string>
    <string name="slorenzo">San Lorenzo</string>
    <string name="archi">Università di Architettura</string>
    <string name="tursi">Palazzo Doria Tursi</string>
    <string name="erbeDesc">The most known square for drinks!</string>
    <string name="slorenzoDesc"><![CDATA[The cathedral was consecrated by Pope Gelasius II in 1118 and was built between the twelfth century and the fourteenth century as fundamentally a medieval building, with some later additions. Secondary naves and side covers are of Romanesque style and the main facade is Gothic from the early thirteenth century, while capitals and columns with interior corridors date from the early fourteenth century. The bell tower and dome were built in the sixteenth century.]]></string>
    <string name="archiDesc">The Faculty of Architecture is located on the hill of Castello, in the oldest part of the Genoese historical centre. Facing into the natural bay of the pre-Roman port, the hill was the location of the first historical settlements of Genoa and has witnessed the numerous transformations from the high-medieval period to the present day.</string>
    <string name="tursiDesc">The building is home to the Municipality of Genoa and is part of the city\'s museum complex.</string>
    <string name="erbeLoc">https://goo.gl/maps/8h9MxYsBvCu</string>
    <string name="slorenzoLoc">https://goo.gl/maps/JHxvL6xuRjr</string>
    <string name="archiLoc">https://goo.gl/maps/WskTGFb1Bh42</string>
    <string name="tursiLoc">https://goo.gl/maps/wf6vP6huRF72</string>
    <string name="boccadasse">Boccadasse</string>
    <string name="boccadasseDesc"><![CDATA[Boccadasse (Bocadâze in Genoese) is an old mariners\' neighbourhood of the Italian city of Genoa.]]></string>
    <string name="boccadasseLoc">https://goo.gl/maps/hRXmbjeYFjF2</string>
    <string name="Nervi">Parchi di Nervi</string>
    <string name="NerviDesc"><![CDATA[The Parchi  di Nervi is a park of about 22 acres (9 hectares) created from the gardens of the Villa Grimaldi, Villa Gropallo, and Villa Serra. ]]></string>
    <string name="NerviLoc">https://goo.gl/maps/wgyCWGJXn8k</string>
    <string name="corsoItalia">Corso Italia</string>
    <string name="corsoItaliaDesc"><![CDATA[Corso Italia is the main promenade of Genoa. About 2.5 kilometres long, the promenade connects the quartieri Foce and Boccadasse.]]></string>
    <string name="corsoItaliaLoc">https://goo.gl/maps/YEGNvoSB6Gu</string>
    <string name="marina">Marina Genova</string>
    <string name="marinaDesc">The touristic port in genova,with many bars and restaurants is an ideal place where relax</string>
    <string name="marinaLoc">https://goo.gl/maps/3Zyx8bvP9kS2</string>
    <string name="pallavicini">Villa Durazzo Pallavicini</string>
    <string name="pallaviciniDesc"><![CDATA[The Villa Durazzo-Pallavicini is a villa with notable 19th-century park in the English romantic style and a small botanical garden.]]></string>
    <string name="pallaviciniLoc">https://goo.gl/maps/yrgjwB3ZvjA2</string>
    <string name="modena">Teatro Gustavo Modena</string>
    <string name="modenaDesc"><![CDATA[ The only theater to have survived the bombings of World War II relatively intact. ]]></string>
    <string name="modenaLoc">https://goo.gl/maps/hWj7nFvRV962</string>
    <string name="deferrari">Piazza De Ferrari</string>
    <string name="deferrariDesc">This is the main square of Genoa, Situated in the heart of the city between the historical and the modern center, Piazza De Ferrari is renowned for its fountain, which was restored in recent years along with a major restyling of the square</string>
    <string name="deferrariLoc">https://goo.gl/maps/gHyQqgH3eN42</string>
    <string name="caste">Belvedere Castelletto</string>
    <string name="casteDesc">the location of a dismantled fort that gave the quarter its name, has views over the Old City and the Gulf of Genoa.</string>
    <string name="casteLoc">https://goo.gl/maps/UhJJAbDoUMT2</string>
    <string name="xxsettembre">Via xx Settembre</string>
    <string name="xxsettembreDesc">An Art Nouveau works became the city\'s main shopping street</string>
    <string name="xxsettembreLoc">https://goo.gl/maps/FTJ3q48p9k42</string>
    <string name="carlofelice">Teatro Carlo Felice</string>
    <string name="carlofeliceDesc">The principal opera house of Genoa, Italy, used for performances of opera, ballet, orchestral music, and recitals. It is located on the Piazza De Ferrari.</string>
    <string name="carlofeliceLoc">https://goo.gl/maps/Uf3Xp8oUrkJ2</string>
    <string name="welcomeLoc">https://goo.gl/maps/suVms6Cco4J2</string>
    <string name="welcomPack">com.google.android.apps.maps</string>
    <string name="flag">flag</string>

</resources>
